@@ -1,3 +1,6 @@
+2011-10-28
+ * print expected number of images of a script
+
 2011-10-27
  * RTS2_DT_DEG_DIST_180 flag
 
